# lxp-qna-engine

./: .env.example  .gitignore  Dockerfile  Makefile  docker.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/lxp_qna_engine/: cli.py
src/lxp_qna_engine/adapters/: http_callback.py  mq_consumer.py
src/lxp_qna_engine/application/: llm_answer.py  scheduling.py
src/lxp_qna_engine/config/: settings.py
src/lxp_qna_engine/domain/: models.py
src/lxp_qna_engine/infrastructure/: store_sqlite.py
tests/: conftest.py  test_e2e_like.py  test_process_pending.py  test_store_roundtrip.py
