[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lxp-qna-engine"
version = "0.1.0"
description = "QnA engine: RabbitMQ -> LangChain -> Scheduler -> Callback"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.5",
    "aio-pika>=9.5.8",
    "apscheduler>=3.11.2",
"langchain>=0.3.15,<0.4",
    "langchain-core>=0.3.15,<0.4",
    "langchain-google-genai>=2.0.6,<3",
    "orjson>=3.11.7",
    "prompts>=0.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "uvloop>=0.22.1",
]

[project.scripts]
lxp-qna-engine = "lxp_qna_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
markers = [
  "asyncio: mark test as asyncio-based",
]
